# ldesign-app

./: .gitignore  BREADCRUMB_FIX.md  CSS_VARIABLES_MIGRATION.md  DEPENDENCY_MANAGEMENT_FEATURE.md  DEPENDENCY_MANAGEMENT_QUICKSTART.md  DEPENDENCY_MANAGEMENT_USAGE.md  FLUTTER_RUST_INTEGRATION_PLAN.md  FONT_GUIDE.md  FONT_WEIGHTS.md  GETTING_STARTED_WITH_RUST.md  HEADER_ACTIONS_IMPLEMENTATION.md  INTEGRATION_FINAL_REPORT.md  MENU_INTEGRATION_COMPLETE.md  MENU_INTEGRATION_SUCCESS.md  MENU_TABS_INTEGRATION_FINAL.md  MENU_TABS_SYNC.md  OPTIMIZATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  QUICKSTART_GUIDE.md  README.md  README_APP.md  REFACTORING_SUMMARY.md  RUST_ARCHITECTURE.md  SELECTOR_FINAL_REPORT.md  SELECTOR_STANDARDIZATION_REPORT.md  TABS_DEBUG.md  TABS_INTEGRATION_COMPLETE.md  TEMPLATE_SELECTOR_GUIDE.md  TEST_REPORT.md  THEMEPICKER_FIX.md  fix_home_screen.txt  index.html  package-lock.json  package.json  pubspec.yaml  tsconfig.build.json  tsconfig.json  ✅_ALL_ISSUES_FIXED.md  优化完成报告.md  功能完全恢复报告.md  (+8 more)
.ldesign/: app.config.development.ts  app.config.production.ts  app.config.staging.ts  app.config.test.ts  app.config.ts  builder.config.ts  launcher.config.development.ts  launcher.config.production.ts  launcher.config.staging.ts  launcher.config.test.ts  launcher.config.ts  launcher.development.config.ts  launcher.production.config.ts
docs/: quick-start.md  (+27 more)
rust/: .gitignore  Cargo.toml  README.md  build.rs
rust/src/: api.rs  lib.rs
rust/src/file_ops/: analyzer.rs  filter.rs  mod.rs  scanner.rs
rust/src/system_info/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  os.rs
(+762 files in other folders)
