[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "2"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.30"
walkdir = "2"
rayon = "1.8"
once_cell = "1.19"
anyhow = "1.0"
log = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
flutter_rust_bridge_codegen = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true